--- a/package.json
+++ b/package.json
@@ -42,9 +42,12 @@
     "@swc/core": "^1.3.107",
     "@types/luxon": "^3.4.2",
     "@types/node": "^20.11.10",
+    "autoprefixer": "^10.4.18",
     "eslint": "^8.56.0",
     "pino-pretty": "^10.3.1",
+    "postcss": "^8.4.35",
     "prettier": "^3.2.4",
+    "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3",
     "vite": "^5.0.12"
@@ -57,6 +60,7 @@
     "@adonisjs/shield": "^8.1.0",
     "@adonisjs/static": "^1.1.1",
     "@adonisjs/vite": "^2.0.2",
+    "@dimerapp/markdown": "^8.0.1",
     "@vinejs/vine": "^1.7.1",
     "edge.js": "^6.0.1",
     "luxon": "^3.4.4",
