--- a/package.json
+++ b/package.json
@@ -62,7 +62,9 @@
     "@adonisjs/static": "^1.1.1",
     "@adonisjs/vite": "^2.0.2",
     "@dimerapp/markdown": "^8.0.1",
+    "@iconify-json/ph": "^1.1.11",
     "@vinejs/vine": "^1.7.1",
+    "edge-iconify": "^2.0.1",
     "edge.js": "^6.0.1",
     "luxon": "^3.4.4",
     "mysql2": "^3.9.2",
